--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "next": "12.1.6",
+    "prismjs": "^1.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
