--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "prismjs": "^1.28.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
