--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ssg": "next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
