--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ssg": "next build && next export"
+    "build": "next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
